# AI-Powered-Financial-Intelligence-Platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7450aca2e901_create_tables.py
backend/app/: database.py  dependencies.py  main.py  models.py
backend/app/databases/: database.py  dependencies.py  vector.py
backend/app/routes/: analysis_route.py  llm_analysis_route.py  rag_route.py  upload_route.py
backend/app/services/: llm_service.py  preprocessing.py  rag_service.py  vector.py
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/dashboard/: AnomaliasPanel.tsx  EvolucaoChart.tsx  InsightsPanel.tsx  KpiCards.tsx  Rankings.tsx  TransactionsList.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: EmptyState.tsx  UploadModal.tsx
frontend/src/hooks/: useUpload.ts
frontend/src/lib/: api.ts
